# simple_shell

./: Makefile.am  configure.ac  execute.c  main.c  my_cd.c  myheader.h  parse.c
